add more CI's, add setup.cfg, add versioneer

--- a/{{cookiecutter.repo_name}}/.coveragerc
+++ b/{{cookiecutter.repo_name}}/.coveragerc
@@ -2,4 +2,6 @@
 omit =
     setup.py
     {{ cookiecutter.package_name }}/__main__.py
+    {{ cookiecutter.package_name }}/_version.py
+    versioneer.py
     tests/*
