raw compiler jinja; add argparse skeleton

--- a/{{cookiecutter.repo_name}}/conda.recipe/meta.yaml
+++ b/{{cookiecutter.repo_name}}/conda.recipe/meta.yaml
@@ -37,7 +37,9 @@ requirements:
   # if you need compilers, uncomment these
   #    read more at https://docs.conda.io/projects/conda-build/en/latest/resources/compiler-tools.html
   # build:
+  {% raw -%}
   #   - {{ compilers('c') }}
+  {%- endraw %}
   host:
     - python
     - pip
