--- a/{{cookiecutter.repo_name}}/conda.recipe/meta.yaml
+++ b/{{cookiecutter.repo_name}}/conda.recipe/meta.yaml
@@ -1,11 +1,11 @@
-{# raw is for ignoring templating with cookiecutter, leaving it for use with conda-build #}
+{# raw is for ignoring templating with cookiecutter, leaving it for use with conda-build -#}
 {% raw -%}
 {% set data = load_setup_py_data() %}
 {%- endraw %}
 
 package:
   name: {{ cookiecutter.package_name.replace('_', '-') }}
-  {# raw is for ignoring templating with cookiecutter, leaving it for use with conda-build #}
+  {# raw is for ignoring templating with cookiecutter, leaving it for use with conda-build -#}
   {% raw -%}
   version: {{ data['version'] }}
   {%- endraw %}
@@ -45,12 +45,12 @@ requirements:
     - pip
   run:
     - python
+    {# raw is for ignoring templating with cookiecutter, leaving it for use with conda-build -#}
     {% raw -%}
     # dependencies are defined in setup.py
     {% for dep in data['install_requires'] %}
     - {{ dep.lower() }}
     {% endfor %}
-    {# raw is for ignoring templating with cookiecutter, leaving it for use with conda-build #}
     {%- endraw %}
 
 test:
