test scripts if cli

--- a/{{cookiecutter.repo_name}}/conda.recipe/meta.yaml
+++ b/{{cookiecutter.repo_name}}/conda.recipe/meta.yaml
@@ -72,6 +72,13 @@ test:
   commands:
     - python -c "from {{ cookiecutter.package_name }} import __version__; assert __version__ == \"{% raw %}{{ version }}{%- endraw %}\""
     - pytest
+    {% if cookiecutter.include_cli == 'y' -%}
+    {% raw -%}
+    {% for name in project['scripts'] %}
+    - {{ name }}
+    {% endfor %}
+    {%- endraw %}
+    {% endif %}
 
 about:
   home: https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}
