--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -3,46 +3,34 @@ build-backend = "hatchling.build"
 requires = ["hatchling", "hatch-vcs>=0.3", "setuptools-scm>=7.1"]
 
 [project]
-name = "{{ cookiecutter.repo_name }}"
-dynamic = ["version"]
-description = "{{ cookiecutter.project_short_description }}"
 authors = [
-    { name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}" },
+  {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}"},
 ]
-license = {text = "{{ cookiecutter.open_source_license }}"}
-readme = "README.rst"
-requires-python = ">=3.9"
 classifiers = [
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: Implementation :: CPython",
-    "Topic :: Software Development :: Libraries :: Python Modules",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 dependencies = [
     # package requirements go here
 ]
+dynamic = ["version"]
+description = "{{ cookiecutter.project_short_description }}"
+license = {text = "{{ cookiecutter.open_source_license }}"}
+name = "{{ cookiecutter.repo_name }}"
+readme = "README.rst"
+requires-python = ">=3.9"
 
 [project.optional-dependencies]
 test = [
-    "pytest",
-    "pytest-cov",
-    "mypy"
-]
-
-[tool.hatch.version]
-source = "vcs"
-
-[tool.hatch.build.hooks.vcs]
-version-file = "src/{{ cookiecutter.package_name }}/_version.py"
-
-[tool.hatch.build.targets.sdist]
-include = [
-    "/src/{{ cookiecutter.package_name }}",
-    "/pyproject.toml"
+  "pytest",
+  "pytest-cov",
+  "mypy"
 ]
 
 {% if cookiecutter.include_cli == "y" -%}
@@ -54,37 +42,49 @@ include = [
 repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"
 
 [tool.coverage.report]
-omit = [
-    "{{ cookiecutter.package_name }}/__main__.py",
-    "tests/*",
-]
 exclude_lines = [
-    "pragma: no cover",
-    # This covers both typing.TYPE_CHECKING and plain TYPE_CHECKING, with any amount of whitespace
-    "if\\s+(typing\\.)?TYPE_CHECKING:",
-    'if __name__ == "__main__":'
+  "pragma: no cover",
+  # This covers both typing.TYPE_CHECKING and plain TYPE_CHECKING, with any amount of whitespace
+  "if\\s+(typing\\.)?TYPE_CHECKING:",
+  'if __name__ == "__main__":'
+]
+omit = [
+  "{{ cookiecutter.package_name }}/__main__.py",
+  "tests/*"
 ]
 
 [tool.distutils.bdist_wheel]
 universal = true
 
+[tool.hatch.build.hooks.vcs]
+version-file = "src/{{ cookiecutter.package_name }}/_version.py"
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "/src/{{ cookiecutter.package_name }}",
+  "/pyproject.toml"
+]
+
+[tool.hatch.version]
+source = "vcs"
+
 [tool.mypy]
+disallow_untyped_defs = true
 files = [ "src/{{ cookiecutter.package_name }}/**/*.py" ]
 python_version = "3.9"
-disallow_untyped_defs = true
 warn_no_return = true
 
 [tool.pytest.ini_options]
-norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe", "examples", "env", "envs", "scripts"]
 addopts = [
-    "-vv",
-    "--cov-report=term-missing",
-    "--cov='{{ cookiecutter.package_name }}'",
-    "--tb=native",
-    "--strict-markers",
-    "--durations=20"
+  "-vv",
+  "--cov-report=term-missing",
+  "--cov='{{ cookiecutter.package_name }}'",
+  "--tb=native",
+  "--strict-markers",
+  "--durations=20"
 ]
 markers = [
-    "serial: execute test serially (to avoid race conditions)",
-    "slow: tests can take a long time (deselect with '-m \"not slow\"')",
+  "serial: execute test serially (to avoid race conditions)",
+  "slow: tests can take a long time (deselect with '-m \"not slow\"')"
 ]
+norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe", "examples", "env", "envs", "scripts"]
