--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -49,7 +49,8 @@ exclude_lines = [
   'if __name__ == "__main__":'
 ]
 omit = [
-  "{{ cookiecutter.package_name }}/__main__.py",
+  "src/{{ cookiecutter.package_name }}/__main__.py",
+  "src/{{ cookiecutter.package_name }}/_version.py",
   "tests/*"
 ]
 
